<resources>
    <string name="app_name">Quran Khmer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <string name="ctivity_translate">Translate</string>
    <string name="hintSearch">Search</string>
    <string name="hintSearchS">Search surah</string>
    <string name="hintSearchA">Search word in ayah</string>
    <string name="send_to">Send to</string>
    <string name="surah">Surah</string>

    <!--    ======new========-->

    <string name="settings">Setting</string>
    <string name="help">Help and Feedback</string>
    <string name="about">About</string>
    <string name="feedback">FeedBack</string>
    <string name="smsstring">SMS</string>
    <string name="emailstring">Email</string>
    <string name="youromment">Comment here</string>
    <string name="submitfeedback">Submit</string>
    <string name="more_app">More app</string>
    <string name="sharethisapp">Share this app</string>
    <string name="ratethisapp">Rate this app</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="Language">Language</string>
    <string name="action_vocabulary">Vocabulary</string>
    <string name="search">SEARCH</string>
    <string name="copy">Copy</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="remove_bookmark">Remove Bookmark</string>
    <string name="bookmark">Bookmarks</string>

    <string-array name="pref_language_titles">
        <item>English</item>
        <item>Khmer</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>en</item>
        <item>kh</item>
    </string-array>
</resources>
